--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "d3": "^7.7.0",
     "react": "^18.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
