--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-components": "^5.3.6",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
+    "webrix": "^1.5.12",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
