--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,10 +20,10 @@
   ],
   "id": "/?source=pwa",
   "start_url": "/?source=pwa",
-  "background_color": "#3367D6",
+  "background_color": "#000000",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3367D6",
+  "theme_color": "#000000",
   "shortcuts": [
 
 
