--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-placeholder-loading": "^0.5.30",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "typescript": "^4.9.4",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
     "webrix": "^1.5.12",
@@ -40,7 +41,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prod":"react-scripts build && serve ./build"
+    "prod": "react-scripts build && serve ./build"
   },
   "eslintConfig": {
     "extends": [
