--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.15",
     "@mui/styled-engine-sc": "^5.10.14",
+    "@react-three/drei": "^9.46.4",
+    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
     "react-scripts": "5.0.1",
+    "react-typed": "^1.2.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
+    "three": "^0.147.0",
     "typescript": "^4.9.4",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
