--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.14",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
