--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "animate.css": "^4.1.1",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
     "react-scripts": "5.0.1",
+    "react-typed": "^1.2.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
     "three": "^0.147.0",
