--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-placeholder-loading": "^0.5.30",
     "react-scripts": "5.0.1",
     "storybook-addon-styled-component-theme": "^2.0.0",
+    "string-strip-html": "^13.0.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "usehooks-ts": "^2.9.1",
