--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-draggable": "^4.4.5",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
+    "react-push-notification": "^1.3.0",
     "react-scripts": "5.0.1",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
