--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-placeholder-loading": "^0.5.30",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sort-by": "^1.2.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
