--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
+    "leaflet": "^1.9.3",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.2.1",
     "react-placeholder-loading": "^0.5.30",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
